[gd_scene format=3 uid="uid://calko2yor2fhr"]

[ext_resource type="Script" uid="uid://dg37jfuknitel" path="res://scripts/day_05.gd" id="1_mfi04"]

[node name="Day05" type="Control" unique_id=188639216]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_mfi04")

[node name="MarginContainer" type="MarginContainer" parent="." unique_id=1900866974]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer" unique_id=1834981644]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Header" type="HBoxContainer" parent="MarginContainer/VBoxContainer" unique_id=839668460]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/Header" unique_id=2014485710]
layout_mode = 2
size_flags_horizontal = 3
text = "Day 01"

[node name="ExampleRunButton" type="Button" parent="MarginContainer/VBoxContainer/Header" unique_id=212241265]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Example"

[node name="InputRunButton" type="Button" parent="MarginContainer/VBoxContainer/Header" unique_id=44863336]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Input"

[node name="Main" type="Button" parent="MarginContainer/VBoxContainer/Header" unique_id=928488469]
layout_mode = 2
size_flags_horizontal = 3
text = "Main"

[node name="Assignment" type="HBoxContainer" parent="MarginContainer/VBoxContainer" unique_id=152763257]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/Assignment" unique_id=1610031663]
layout_mode = 2
size_flags_horizontal = 3

[node name="ExPart1" type="Label" parent="MarginContainer/VBoxContainer/Assignment/VBoxContainer" unique_id=2131368158]
layout_mode = 2
size_flags_vertical = 1
text = "Example Part 1"

[node name="ExAnswer1" type="LineEdit" parent="MarginContainer/VBoxContainer/Assignment/VBoxContainer" unique_id=753090320]
layout_mode = 2
text = "0"
placeholder_text = "Answer"
editable = false

[node name="ExPart2" type="Label" parent="MarginContainer/VBoxContainer/Assignment/VBoxContainer" unique_id=454447906]
layout_mode = 2
size_flags_vertical = 1
text = "Example Part 2"

[node name="ExAnswer2" type="LineEdit" parent="MarginContainer/VBoxContainer/Assignment/VBoxContainer" unique_id=710676449]
layout_mode = 2
text = "0"
placeholder_text = "Answer"
editable = false

[node name="ExPart3" type="Label" parent="MarginContainer/VBoxContainer/Assignment/VBoxContainer" unique_id=1361340010]
layout_mode = 2
size_flags_vertical = 1
text = "Example Part 3"

[node name="ExAnswer3" type="LineEdit" parent="MarginContainer/VBoxContainer/Assignment/VBoxContainer" unique_id=1704667764]
layout_mode = 2
text = "0"
placeholder_text = "Answer"
editable = false

[node name="Part1" type="Label" parent="MarginContainer/VBoxContainer/Assignment/VBoxContainer" unique_id=233387032]
layout_mode = 2
size_flags_vertical = 1
text = "Answer Part 1"

[node name="Answer1" type="LineEdit" parent="MarginContainer/VBoxContainer/Assignment/VBoxContainer" unique_id=1887212131]
layout_mode = 2
text = "0"
placeholder_text = "Answer"
editable = false

[node name="Part2" type="Label" parent="MarginContainer/VBoxContainer/Assignment/VBoxContainer" unique_id=3054915]
layout_mode = 2
size_flags_vertical = 1
text = "Answer Part 2"

[node name="Answer2" type="LineEdit" parent="MarginContainer/VBoxContainer/Assignment/VBoxContainer" unique_id=455472189]
layout_mode = 2
text = "0"
placeholder_text = "Answer"
editable = false

[node name="Part3" type="Label" parent="MarginContainer/VBoxContainer/Assignment/VBoxContainer" unique_id=1351386824]
layout_mode = 2
size_flags_vertical = 1
text = "Answer Part 3"

[node name="Answer3" type="LineEdit" parent="MarginContainer/VBoxContainer/Assignment/VBoxContainer" unique_id=1822402526]
layout_mode = 2
text = "0"
placeholder_text = "Answer"
editable = false

[node name="Example" type="VBoxContainer" parent="MarginContainer/VBoxContainer/Assignment" unique_id=395298698]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/Assignment/Example" unique_id=1185311346]
layout_mode = 2
text = "Example Input"

[node name="ExampleTextEdit" type="TextEdit" parent="MarginContainer/VBoxContainer/Assignment/Example" unique_id=1404725538]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ExampleTextEdit2" type="TextEdit" parent="MarginContainer/VBoxContainer/Assignment/Example" unique_id=2038900115]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ExampleTextEdit3" type="TextEdit" parent="MarginContainer/VBoxContainer/Assignment/Example" unique_id=1620308879]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[connection signal="pressed" from="MarginContainer/VBoxContainer/Header/ExampleRunButton" to="." method="_on_example_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Header/InputRunButton" to="." method="_on_input_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Header/Main" to="." method="_on_main_pressed"]
[connection signal="text_changed" from="MarginContainer/VBoxContainer/Assignment/Example/ExampleTextEdit" to="." method="_on_example_text_edit_text_changed"]
[connection signal="text_changed" from="MarginContainer/VBoxContainer/Assignment/Example/ExampleTextEdit2" to="." method="_on_example_text_edit_text_changed2"]
[connection signal="text_changed" from="MarginContainer/VBoxContainer/Assignment/Example/ExampleTextEdit3" to="." method="_on_example_text_edit_3_text_changed"]
